--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -1,5 +1,5 @@
 .register{
-    background-image: url('../../../images/bannerbackground.png');
+    background-image: url('../../images/bannerbackground.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
